force-app/main/default/objects/Solicitud_Camara__c/Solicitud_Camara__c.object-meta.xml
<CustomObject>
    <description>Solicitudes de contratación de nuevas cámaras de seguridad realizadas por los clientes desde el portal.</description>
    <label>Solicitud de Cámara</label>
    <nameField>
        <displayFormat>SOL-{0000}</displayFormat>
        <label>Número de Solicitud</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Solicitudes de Cámaras</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>