force-app/main/default/objects/Solicitud_Camara__c/fields/Contacto__c.field-meta.xml
<CustomField>
    <fullName>Contacto__c</fullName>
    <label>Contacto</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Solicitudes de Cámaras</relationshipLabel>
    <relationshipName>Solicitudes_Camaras_Contacto</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contacto del portal que realizó la solicitud de contratación.</description>
</CustomField>