force-app/main/default/objects/Solicitud_Camara__c/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Cuenta (empresa) asociada al solicitante.</description>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Solicitudes de Cámaras</relationshipLabel>
    <relationshipName>Solicitudes_Camaras</relationshipName>
    <type>Lookup</type>
</CustomField>