force-app/main/default/objects/Solicitud_Camara__c/fields/Detalle_Camaras__c.field-meta.xml
<CustomField>
    <fullName>Detalle_Camaras__c</fullName>
    <description>Detalle de cada cámara solicitada: nombre y ubicación. Formato JSON o texto libre.</description>
    <label>Detalle de Cámaras</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>