force-app/main/default/objects/Solicitud_Camara__c/fields/Email_Solicitante__c.field-meta.xml
<CustomField>
    <fullName>Email_Solicitante__c</fullName>
    <description>Email del usuario que realiza la solicitud.</description>
    <label>Email del Solicitante</label>
    <required>true</required>
    <type>Email</type>
</CustomField>