force-app/main/default/objects/Solicitud_Camara__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <description>Estado actual de la solicitud de contratación.</description>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendiente</fullName>
                <default>true</default>
                <label>Pendiente</label>
            </value>
            <value>
                <fullName>En Revision</fullName>
                <label>En Revisión</label>
            </value>
            <value>
                <fullName>Aprobada</fullName>
            </value>
            <value>
                <fullName>Rechazada</fullName>
            </value>
            <value>
                <fullName>Completada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>