force-app/main/default/objects/Solicitud_Camara__c/fields/Fecha_Solicitud__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Solicitud__c</fullName>
    <description>Fecha y hora en que se creó la solicitud.</description>
    <defaultValue>NOW()</defaultValue>
    <label>Fecha de Solicitud</label>
    <type>DateTime</type>
</CustomField>