force-app/main/default/objects/Solicitud_Camara__c/fields/Nombre_Solicitante__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Solicitante__c</fullName>
    <description>Nombre completo del usuario que realiza la solicitud.</description>
    <label>Nombre del Solicitante</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>