force-app/main/default/objects/Solicitud_Camara__c/fields/Numero_Camaras__c.field-meta.xml
<CustomField>
    <fullName>Numero_Camaras__c</fullName>
    <description>Cantidad de cámaras solicitadas en esta petición.</description>
    <label>Número de Cámaras</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>