force-app/main/default/objects/Solicitud_Camara__c/fields/Telefono_Solicitante__c.field-meta.xml
<CustomField>
    <fullName>Telefono_Solicitante__c</fullName>
    <description>Teléfono de contacto del solicitante.</description>
    <label>Teléfono del Solicitante</label>
    <type>Phone</type>
</CustomField>